fix side-nav for mobile and body text alignment

--- a/materialize/css/materialize.css
+++ b/materialize/css/materialize.css
@@ -4054,7 +4054,7 @@ nav .button-collapse {
   z-index: 1;
   height: 56px;
   margin: 0;
-  left: 2rem;
+  left: 1rem;
 }
 
 nav .button-collapse i {
@@ -6934,12 +6934,11 @@ input[type=range]:focus::-ms-fill-upper {
 
 .side-nav {
   position: fixed;
-  width: 50%;
+  width: 75%;
   max-width: 220px;
   left: 0;
-  top: 56px;
+  top: 0;
   margin: 0;
-  padding-left: 2rem;
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
   height: 100%;
@@ -6972,7 +6971,6 @@ input[type=range]:focus::-ms-fill-upper {
 .side-nav li {
   float: none;
   line-height: 48px;
-  padding-left: 1rem;
   
 }
 
